--- a/template.html
+++ b/template.html
@@ -2,19 +2,19 @@
 <html>
 <body>
 
-<script type="text/javascript" src="ab_anim.js"></script>
+<script type="text/javascript" src="%s_anim.js"></script>
 <script type="text/javascript" src="animate.js"></script>
 
 <canvas></canvas>
 
 <script type="text/javascript">
-const delayScale = 15;
+const delayScale = 25;
 
 const img = new Image();
 img.onload = () => {
-  animate(img, delayScale, ab_timeline, document.getElementsByTagName('canvas')[0]);
+  animate(img, delayScale, %s_timeline, document.getElementsByTagName('canvas')[0]);
 };
-img.src = 'ab_packed.webp';
+img.src = '%s_packed.webp';
 
 </script>
 
