--- a/demo_test.html
+++ b/demo_test.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+	<style type="text/css">
+		* { margin: 0; padding: 0; }
+	</style>
+</head>
+
 <body>
 
 <script type="text/javascript" src="demo_anim.js"></script>
